# esp_iot_rest

./: CMakeLists.txt  Dockerfile  PIT.csv  README.md  build.sh  flash.sh  sdkconfig  sdkconfig.old
components/config-manager/: CMakeLists.txt  config-manager.c
components/config-manager/include/: config-manager.h
components/motor-driver/: CMakeLists.txt  motor-driver.c
components/pet-feeder/: CMakeLists.txt
components/rest-server/: CMakeLists.txt  rest-server.c
components/rest-server/front-end/web/: package-lock.json  package.json  webpack.config.js
components/rest-server/front-end/web/src/: App.jsx
components/rest-server/front-end/web/src/components/cards/: Clock.jsx  TimeCard.jsx
components/rest-server/front-end/web/src/hooks/: useFetch.jsx
components/rest-server/front-end/web/src/pages/ConfigureWifiPage/: ConfigureWifiPage.jsx
components/rest-server/front-end/web/src/pages/ConfigureWifiPage/components/forms/: ConfigureWifiForm.jsx
components/rest-server/front-end/web/src/pages/HomePage/: HomePage.jsx
components/rest-server/include/: rest-server.h
components/smart-home/: CMakeLists.txt  smart-home-wrapper.cpp  smart-home.cpp
components/smart-home/include/: smart-home-wrapper.h  smart-home.hpp
components/time-server/: CMakeLists.txt  time-server.c
components/time-server/include/: time-server.h
components/timer/: timer.c
components/wifi-driver/: CMakeLists.txt  wifi-driver.c
components/wifi-driver/include/: wifi-driver.h
main/: Global.h  main.c
src/: main.cpp
src/components/ir-sensor/: ir-sensor.cpp  ir-sensor.hpp
(+2 files in other folders)
